--- a/.github/workflows/linux-appimage-build.yml
+++ b/.github/workflows/linux-appimage-build.yml
@@ -59,21 +59,37 @@ jobs:
         curl -LO "https://github.com/duckstation/chtdb/releases/download/latest/cheats.zip"
         curl -LO "https://github.com/duckstation/chtdb/releases/download/latest/patches.zip"
 
-    - name: Compile Build
+    - name: Compile Build (Qt)
       shell: bash
       run: |
-        mkdir build
-        cd build
+        mkdir build-qt
+        cd build-qt
         cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DCMAKE_PREFIX_PATH="$HOME/deps" -DCMAKE_C_COMPILER=clang-19 -DCMAKE_CXX_COMPILER=clang++-19 -DCMAKE_EXE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_MODULE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_SHARED_LINKER_FLAGS_INIT="-fuse-ld=lld" ..
         cmake --build . --parallel
         cd ..
-        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build) $HOME/deps DuckStation-x64
+        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build-qt) $HOME/deps DuckStation-x64 duckstation-qt
 
     - name: Upload Qt AppImage
       uses: actions/upload-artifact@v4
       with:
         name: "linux-x64-appimage"
         path: "DuckStation-x64.AppImage"
+
+    - name: Compile Build (Mini)
+      shell: bash
+      run: |
+        mkdir build-mini
+        cd build-mini
+        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DCMAKE_PREFIX_PATH="$HOME/deps" -DCMAKE_C_COMPILER=clang-19 -DCMAKE_CXX_COMPILER=clang++-19 -DCMAKE_EXE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_MODULE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_SHARED_LINKER_FLAGS_INIT="-fuse-ld=lld" -DBUILD_QT_FRONTEND=OFF -DBUILD_MINI_FRONTEND=ON ..
+        cmake --build . --parallel
+        cd ..
+        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build-mini) $HOME/deps DuckStation-Mini-x64 duckstation-mini
+
+    - name: Upload Mini AppImage
+      uses: actions/upload-artifact@v4
+      with:
+        name: "linux-x64-appimage"
+        path: "DuckStation-Mini-x64.AppImage"
 
 
   linux-x64-sse2-appimage-build:
@@ -130,18 +146,34 @@ jobs:
         curl -LO "https://github.com/duckstation/chtdb/releases/download/latest/cheats.zip"
         curl -LO "https://github.com/duckstation/chtdb/releases/download/latest/patches.zip"
 
-    - name: Compile Build
+    - name: Compile Build (Qt)
       shell: bash
       run: |
-        mkdir build
-        cd build
+        mkdir build-qt
+        cd build-qt
         cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DDISABLE_SSE4=ON -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DCMAKE_PREFIX_PATH="$HOME/deps" -DCMAKE_C_COMPILER=clang-19 -DCMAKE_CXX_COMPILER=clang++-19 -DCMAKE_EXE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_MODULE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_SHARED_LINKER_FLAGS_INIT="-fuse-ld=lld" ..
         cmake --build . --parallel
         cd ..
-        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build) $HOME/deps DuckStation-x64-SSE2
+        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build-qt) $HOME/deps DuckStation-x64-SSE2 duckstation-qt
 
     - name: Upload Qt AppImage
       uses: actions/upload-artifact@v4
       with:
         name: "linux-x64-sse2-appimage"
         path: "DuckStation-x64-SSE2.AppImage"
+
+    - name: Compile Build (Mini)
+      shell: bash
+      run: |
+        mkdir build-mini
+        cd build-mini
+        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DDISABLE_SSE4=ON -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON -DCMAKE_PREFIX_PATH="$HOME/deps" -DCMAKE_C_COMPILER=clang-19 -DCMAKE_CXX_COMPILER=clang++-19 -DCMAKE_EXE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_MODULE_LINKER_FLAGS_INIT="-fuse-ld=lld" -DCMAKE_SHARED_LINKER_FLAGS_INIT="-fuse-ld=lld" -DBUILD_QT_FRONTEND=OFF -DBUILD_MINI_FRONTEND=ON ..
+        cmake --build . --parallel
+        cd ..
+        scripts/packaging/appimage/make-appimage.sh $(realpath .) $(realpath ./build-mini) $HOME/deps DuckStation-Mini-x64-SSE2 duckstation-mini
+
+    - name: Upload Mini AppImage
+      uses: actions/upload-artifact@v4
+      with:
+        name: "linux-x64-sse2-appimage"
+        path: "DuckStation-Mini-x64-SSE2.AppImage"
